# daily-stock-analysis-openclaw-skill

./: .env.complete  .gitignore  ABCD_COMPARISON.md  CLEANUP_REPORT.md  FINAL_CLEANUP_PLAN.md  HOT_RELOAD_EXPLAINED.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  README.md  REQUIREMENTS_REVIEW.md  SKILL.md  TEST_REPORT.md  TEST_SUMMARY.md  UPSTREAM_UPDATES_ANALYSIS.md  V3.4_TO_V3.10_UPDATES.md  cleanup_and_optimize.py  demo_multi_agent_prompt.py  pyproject.toml  requirements.txt  run.sh  subagent_tasks.py  test_all_features.py  test_simple.py
config/: README.md  agents.yaml
core/: config.py
data_provider/: __init__.py  akshare_fetcher_fixed.py  akshare_test.py  base.py  eastmoney_spider.py  longbridge_fetcher.py  yfinance_fetcher.py
docs/: CLEANUP_REPORT.md  GUIDE.md  OUTPUT_PATHS.md  README.md  TEMPLATE_EVALUATION_REPORT.md  TEST_SUMMARY.md  index.html  数据源配置说明.md
output/: a-market-review-20260311.html  a-share-market-review-20260320-complete.html  a-share-market-review-20260320.html  byd-analysis-20260310.html  enterprise-software-ai-analysis-20260310.html  iflytek-analysis-20260311-1038.html  iflytek-analysis-20260311.html  market-review-20260311-enhanced.html  market-review-20260311-enhanced.md  market-review-20260311.html  market-review-20260311.md  market-review-20260320-detailed.md  market-review-20260320-full.md  token-stats-20260311.html  zhongguanshuguang-20260312.html  zhongkeguangguang-20260311.html
patch/: __init__.py  eastmoney_patch.py
scripts/: UPGRADE_CHECKLIST.md  check_output_paths.sh  generate_comparison_html.py  generate_enhanced_review.py  (+4 more)
(+93 files in other folders)
