[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-stock-analysis-openclaw-skill"
version = "1.0.0"
description = "Daily Stock Analysis OpenClaw Skill"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "akshare>=1.0.0",
    "tushare>=1.0.0",
    "yfinance>=0.2.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "openclaw>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pylint>=2.0",
    "black>=23.0",
]

[tool.setuptools.packages.find]
where = ["src"]
